Resolved a bunch of bugs, thought about things. Happiness.

--- a/SimTECH/SimTECH/Components/GradientColour.razor
+++ b/SimTECH/SimTECH/Components/GradientColour.razor
@@ -4,14 +4,10 @@
 </MudElement>
 
 @code {
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
-    [Parameter, EditorRequired]
-    public int Min { get; set; }
-    [Parameter, EditorRequired]
-    public int Max { get; set; }
-    [Parameter, EditorRequired]
-    public int Value { get; set; }
+    [Parameter] public RenderFragment? ChildContent { get; set; }
+    [Parameter, EditorRequired] public int Min { get; set; }
+    [Parameter, EditorRequired] public int Max { get; set; }
+    [Parameter, EditorRequired] public int Value { get; set; }
 
     private string _styles
     {
