--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -13,7 +13,7 @@
                 <MudText>Todo</MudText>
                 <p>sokje for human being generator-data and f1 graphics generator</p>
                 <p>tabler icons for icons</p>
-                <p>MudBlazor for the component framework</p>
+                <p>Website built with MudBlazor</p>
                 <p>FrankyDoodle for simming in general</p>
                 <p>Skeltal for name inspiration</p>
             </MudPaper>
