--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -95,9 +95,9 @@
                     <MudTd Class="accent-cell">
                         <SmolAccent Colour="@context.Colour" />
                     </MudTd>
-                    <MudTd Class="overflow-hider">
-                        <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                            <MudText>@context.FullName</MudText>
+                    <MudTd>
+                        <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center" Style="max-width: 220px">
+                            <MudText Class="overflow-hider">@context.FullName</MudText>
                             @if (context.Grid == 1)
                             {
                                 <sup style="font-size: 0.7rem">P</sup>
@@ -111,8 +111,8 @@
                     <MudTd Class="number-col">
                         <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                     </MudTd>
-                    <MudTd>
-                        <MudText>@context.TeamName</MudText>
+                    <MudTd Style="max-width: 220px">
+                        <MudText Class="overflow-hider">@context.TeamName</MudText>
                     </MudTd>
                     <MudTd Class="number-col">
                         <SupplierDisplay Colour="@context.ManufacturerColour" Accent="@context.ManufacturerAccent">
