--- a/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
@@ -4,17 +4,17 @@
     </TitleContent>
     <DialogContent>
         <MudStack>
-            <MudStack Row="true" Spacing="3">
+            <MudStack Row="true" Spacing="1">
                 <MudSelect T="string" @bind-Value="@model.Icon" Label="Icon" Class="field-xs">
                     @foreach (var wIcon in weatherIcons)
                     {
                         <MudSelectItem Value="@wIcon">
-                            <MudIcon Icon="@wIcon" />
+                            <CustomIcon Icon="@wIcon" Colour="@model.Colour" />
                         </MudSelectItem>
                     }
                 </MudSelect>
 
-                <MudColorPicker @bind-Text="@model.Colour" Label="Colour" Placeholder="Select colour" Class="field-sm" />
+                <MudColorPicker @bind-Text="@model.Colour" Label="Colour" Placeholder="Select colour" Class="field-md" />
 
                 <MudTextField T="string" @bind-Text="@model.Terminology" Label="Terminology" />
             </MudStack>
@@ -35,7 +35,7 @@
                              Label="Engine multiplier" />
 
             <MudNumericField T="int" @bind-Value="@model.ReliablityModifier"
-                             Label="Reliability modifier" />
+                             Label="REL modifier" />
 
             <MudNumericField T="int" @bind-Value="@model.RngModifier"
                              Label="RNG modifier" />
@@ -53,7 +53,6 @@
 
     EditClimate model;
     string[] weatherIcons = Constants.AllWeatherIcons;
-    string colour = string.Empty;
 
     protected override void OnInitialized()
     {
