--- a/SimTECH/SimTECH/Pages/Season/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Settings.razor
@@ -6,7 +6,7 @@
                 <MudSpacer />
                 <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason" Class="btn-md">Edit</MudButton>
             </MudStack>
-            <MudText Typo="Typo.body2" Color="Color.Warning">TODO: Fuck ugly page, improve design plssss</MudText>
+            <MudText Typo="Typo.body2" Color="Color.Warning">Fucking ugly page, targeted for re-design.</MudText>
         </MudPaper>
     </MudItem>
     <MudItem xs="4">
